--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
 <script src="../js/postGame.js"></script>
 <script src="../js/getUser.js"></script>
 <script src="../js/postUser.js"></script>
+<script src="../js/postLogin.js"></script>
 </head>
 
 <body>		
@@ -19,13 +20,13 @@
     <ul class="navbar-nav">
       <li class="nav-item">
       <!-- Button trigger modal -->
-				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModalLong">
   				Login	
 				</button>
       </li>      
       <li class="nav-item">
         <!-- Button trigger modal -->
-				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModalLong">
   				Registration	
 				</button>
       </li>
@@ -58,11 +59,11 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal fade" id="registerModalLong" tabindex="-1" role="dialog" aria-labelledby="registerModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Registration</h5>
+        <h5 class="modal-title" id="registerModalLongTitle">Register</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -221,7 +222,7 @@
 			    <label for="country">Country</label>
 			    	<select id="country">
 						<option value="AFG">Afghanistan</option>
-						<option value="ALA">Åland Islands</option>
+						<option value="ALA">ï¿½land Islands</option>
 						<option value="ALB">Albania</option>
 						<option value="DZA">Algeria</option>
 						<option value="ASM">American Samoa</option>
@@ -274,10 +275,10 @@
 						<option value="COD">Congo, the Democratic Republic of the</option>
 						<option value="COK">Cook Islands</option>
 						<option value="CRI">Costa Rica</option>
-						<option value="CIV">Côte d'Ivoire</option>
+						<option value="CIV">Cï¿½te d'Ivoire</option>
 						<option value="HRV">Croatia</option>
 						<option value="CUB">Cuba</option>
-						<option value="CUW">Curaçao</option>
+						<option value="CUW">Curaï¿½ao</option>
 						<option value="CYP">Cyprus</option>
 						<option value="CZE">Czech Republic</option>
 						<option value="DNK">Denmark</option>
@@ -400,11 +401,11 @@
 						<option value="PRT">Portugal</option>
 						<option value="PRI">Puerto Rico</option>
 						<option value="QAT">Qatar</option>
-						<option value="REU">Réunion</option>
+						<option value="REU">Rï¿½union</option>
 						<option value="ROU">Romania</option>
 						<option value="RUS">Russian Federation</option>
 						<option value="RWA">Rwanda</option>
-						<option value="BLM">Saint Barthélemy</option>
+						<option value="BLM">Saint Barthï¿½lemy</option>
 						<option value="SHN">Saint Helena, Ascension and Tristan da Cunha</option>
 						<option value="KNA">Saint Kitts and Nevis</option>
 						<option value="LCA">Saint Lucia</option>
@@ -482,31 +483,30 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal fade" id="loginModalLong" tabindex="-1" role="dialog" aria-labelledby="loginModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Login</h5>
+        <h5 class="modal-title" id="loginModalLongTitle">Login</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form>
-			<div class="form-group">
-			    <label for="username">Username</label>
-			    <input type="text" class="form-control" id="username" placeholder="Enter username" required>
-			  </div>
-			  <div class="form-group">
-			    <label for="password">Password</label>
-			    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-			 </div>
-			<input type="button" onclick="postLogin()" class="btn btn-primary" value="Login">
-		</form>
+      <form>
+        <div class="form-group">
+        	<label for="username">Username</label>
+          <input type="text" class="form-control" id="loginUsername" placeholder="Enter username" required>
+        </div>
+        <div class="form-group">
+        	<label for="password">Password</label>
+          <input type="password" class="form-control" id="loginPassword" placeholder="Enter password" required>
+        </div>
+      </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Login</button>
+				<input type="button" onclick="postLogin()" class="btn btn-primary" value="Login">
       </div>
     </div>
   </div>
