--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,6 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <script src="../js/cookieFactory.js"></script>
-<script src="../js/removeCookies.js"></script>
 <script src="../js/getGame.js"></script>
 <script src="../js/postGame.js"></script>
 <script src="../js/getUser.js"></script>
@@ -503,6 +502,9 @@
       </div>
     </div>
   </div>
+</div>
+<div>
+<button onclick=removeCookies()>Logout</button>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
